<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">EmaStore</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="menu">MENU</string>
    <string name="details">DETAILS</string>
    <string name="log_out">LOG OUT</string>
    <string name="exit">EXIT</string>
    <string name="back">BACK</string>
    <string name="download">DOWNLOAD</string>
    <string name="title">TITLE</string>
    <string name="username">USERNAME</string>
    <string name="mute_audio">MUTE</string>
    <string name="unmute_audio">UNMUTE</string>
</resources>