<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:id="@+id/singup">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/bg_box"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/bg_box"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:paddingStart="16dp"
                android:text="@string/sign_up"
                android:textSize="28sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:paddingHorizontal="16dp"
                android:minHeight="40dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_circle"
                    android:gravity="center"
                    android:text="U"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/etUser"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_box"
                    android:padding="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_circle"
                    android:gravity="center"
                    android:text="P"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_box">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:padding="8dp"
                        android:inputType="textPassword"/>

                    <ImageButton
                        android:id="@+id/btnTogglePass"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:src="@drawable/ic_visibility_off"
                        android:scaleType="center"
                        android:contentDescription="Mostrar/ocultar contraseña"/>

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_box"
                android:text="@string/sign_up" />

            <Button
                android:id="@+id/btnLogin"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bg_box"
            android:orientation="vertical" >

            <Button
                android:id="@+id/bttnAudio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mute_audio" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>